feat: add dynamic filename utility and update branding
Introduces a utility function for generating timestamped download filenames and integrates it into image download actions in history and home pages. Updates web app branding in index.html and manifest.json to use 'PoliAI' with new theme colors and icon references. Also improves code consistency with additional braces for clarity.

--- a/web/index.html
+++ b/web/index.html
@@ -2,27 +2,16 @@
 <html>
 
 <head>
-  <script>
-    self.FIREBASE_APPCHECK_DEBUG_TOKEN = true;
-  </script>
-
-  <base href="$FLUTTER_BASE_HREF">
-
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
-
-  <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="app">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
-
-  <title>app</title>
+  <meta name="description" content="PoliAI">
+  <meta name="theme-color" content="#2563EB">
+  <title>PoliAI</title>
   <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" href="icons/favicon.png">
+  <link rel="apple-touch-icon" href="icons/icon-192.png">
+  <meta name="apple-mobile-web-app-title" content="PoliAI">
+  <base href="/">
 </head>
 
 <body>
